--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,16 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    border-radius:5px;
+    overflow: hidden;
+    box-shadow: 5px 5px 40px 5px rgb(176, 167, 167);
+    position:relative;
+    
+    transition: all 0.5s ease-in-out;
+}
+.imagebox:hover{
+    transform: scale(1.1);
+    box-shadow: 5px 5px 20px 5px rgb(176, 167, 167);
 }
 
 footer{
